test12/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-pod
spec:
  containers:
  - name: alpine
    image: wimvandenwyngaert/test:2.3
    command:
    - sh
    - -c
    - echo 'Welcome Wim' && sleep infinity
