test12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test12-echoserver
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vdww.duckdns.org
    secretName: vdww-tls-secret
  rules:
  - host: echoserver-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver-svc
            port:
              number: 80
  - host: echoserver-app.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver-svc
            port:
              number: 80
  - host: vdww.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver-svc
            port:
              number: 80
